--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bennerra/vixenhealth-ui",
+  "name": "@VixenHealth/vixenhealth-ui",
   "version": "1.0.1",
   "repository": "https://github.com/VixenHealth/VHUI.git",
   "scripts": {
