--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -32,6 +32,7 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
           always-auth: true
+      - run: npm login --scope=@NAMESPACE --auth-type=legacy --registry=https://npm.pkg.github.com
       - run: npm ci
       - run: npm publish
         env:
