--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.2",
   "repository": "https://github.com/VixenHealth/VHUI.git",
   "scripts": {
-    "rollup": "rollup -c --bundleConfigAsCjs"
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "Elgina Anastasia",
   "license": "ISC",
@@ -12,20 +15,54 @@
     "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@chromatic-com/storybook": "^1.6.1",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@storybook/addon-essentials": "^8.2.1",
+    "@storybook/addon-interactions": "^8.2.1",
+    "@storybook/addon-links": "^8.2.1",
+    "@storybook/addon-onboarding": "^8.2.1",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.4",
+    "@storybook/blocks": "^8.2.1",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^8.2.1",
+    "@storybook/react-webpack5": "^8.2.1",
+    "@storybook/test": "^8.2.1",
+    "@svgr/rollup": "^8.1.0",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
-    "react": "^18.3.1",
+    "babel-jest": "^29.7.0",
+    "css-loader": "^7.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "rollup": "^4.18.1",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "sass": "^1.77.7",
+    "sass-loader": "^14.2.1",
+    "storybook": "^8.2.1",
+    "style-loader": "^4.0.0",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "classnames": "^2.5.1"
+  }
 }
