--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "classnames": "^2.5.1",
+    "normalize.css": "^8.0.1",
     "react-router-dom": "^6.24.1"
   }
 }
