--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@VixenHealth/vixenhealth-ui",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "repository": "https://github.com/VixenHealth/VHUI.git",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs",
@@ -44,8 +44,11 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "rollup": "^4.18.1",
+    "rollup-plugin-css-only": "^4.5.2",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-sass": "^1.13.1",
     "sass": "^1.77.7",
     "sass-loader": "^14.2.1",
     "storybook": "^8.2.1",
