--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "classnames": "^2.5.1",
     "normalize.css": "^8.0.1",
     "react-router-dom": "^6.24.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "storybook-preset-inline-svg": "^1.0.1"
   }
 }
