--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "babel-jest": "^29.7.0",
+    "classnames": "^2.5.1",
     "css-loader": "^7.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "normalize.css": "^8.0.1",
+    "postcss-url": "^10.1.3",
     "rollup": "^4.18.1",
     "rollup-plugin-css-only": "^4.5.2",
     "rollup-plugin-dts": "^6.1.1",
@@ -66,13 +69,6 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@rollup/plugin-image": "^3.0.3",
-    "@svgr/webpack": "^8.1.0",
-    "classnames": "^2.5.1",
-    "normalize.css": "^8.0.1",
-    "postcss-url": "^10.1.3",
-    "react-router-dom": "^6.24.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "storybook-preset-inline-svg": "^1.0.1"
+    "@rollup/plugin-image": "^3.0.3"
   }
 }
