--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-sass": "^1.13.1",
     "sass": "^1.77.7",
     "sass-loader": "^14.2.1",
