--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@VixenHealth/vixenhealth-ui",
-  "version": "1.6.21",
+  "version": "1.6.22",
   "repository": "https://github.com/VixenHealth/VHUI.git",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs",
@@ -38,6 +38,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.1",
     "babel-jest": "^29.7.0",
     "classnames": "^2.5.1",
     "css-loader": "^7.1.2",
